--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "surveyor.ai",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "type": "module",
   "main": "dist/src/index.js",
@@ -9,6 +9,9 @@
     "test": "mocha -r dotenv/config **/*.test.ts",
     "cli": "ts-node --esm ./src/cli.ts",
     "build": "npx tsc -p tsconfig.json"
+  },
+  "bin": {
+    "surveyor": "./dist/src/cli.js"
   },
   "author": "",
   "license": "ISC",
